fix: css alignment

--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
     font-family: sans-serif;
 }
 
+
+/*---- Nav -----*/
+
 .nav-section {
     position: sticky;
     top: 0;
@@ -109,6 +112,9 @@ li:nth-child(4):hover {
     background-color: rgba(114, 255, 219, 0.1);
 }
 
+
+/*---- Intro -----*/
+
 #intro-section {
     padding: 4rem calc(17.5rem + 1vmin) 0 calc(17.5rem + 1vmin);
 }
@@ -147,6 +153,9 @@ li:nth-child(4):hover {
     opacity: 0.85;
     color: var(--accent-clr);
 }
+
+
+/*----About me -----*/
 
 #about-me-section {
     display: flex;
@@ -215,6 +224,9 @@ li:nth-child(4):hover {
     padding: 2rem 0;
     line-height: 1.8rem;
 }
+
+
+/*---- Main Projects -----*/
 
 #projects-section-container {
     margin: 0 2rem 0 18%;
@@ -293,15 +305,6 @@ li:nth-child(4):hover {
 .grid .each-project:not(:first-of-type) a img {
     max-height: 25rem;
     max-width: 25rem;
-}
-
-.section-header-line {
-    /* position: absolute;
-    top: 190px;
-    left: 175px; */
-    /* width: calc(430px + 1vmin); */
-    /* width: 35%;
-    border-bottom: 1.5px solid rgba(255, 255, 255, 0.15); */
 }
 
 .right-margin {
@@ -396,12 +399,12 @@ li:nth-child(4):hover {
     line-height: 30px;
 }
 
-.project-writeup .github-link {
+.github-link {
     padding-top: 0;
-    margin: 0 15px 0 0;
+    /* margin: 0 15px 0 0; */
 }
 
-.project-writeup .github-link>a {
+.github-link>a {
     font-size: 16px;
 }
 
@@ -412,6 +415,9 @@ li:nth-child(4):hover {
     font-family: "Fira Code", monospace;
     justify-content: flex-end;
 }
+
+
+/*---- Other Projects -----*/
 
 .other-projects {
     display: flex;
@@ -444,6 +450,9 @@ li:nth-child(4):hover {
     font-family: "Fira Code", monospace;
 }
 
+
+/*---- Contact -----*/
+
 #contact-section {
     display: flex;
     flex-direction: column;
@@ -473,6 +482,9 @@ li:nth-child(4):hover {
     max-width: 450px;
     text-align: center;
 }
+
+
+/*---- Footer -----*/
 
 footer {
     display: flex;
@@ -637,7 +649,7 @@ footer:hover {
     }
     .project-writeup .github-link {
         padding-top: 0;
-        margin: 0 15px 0 0;
+        /* margin: 0 15px 0 0; */
     }
     .project-writeup .github-link>a {
         font-size: 15px;
